# SuperOffice_env

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Idea.md  LICENSE  README.md  RESOURCES.md  RULES_JUDGING.md  main.py  pyproject.toml  requirements-mac.txt  requirements.txt  setup_mac.sh
PRD/: MarketVille_PRD.md
demo/: package.json
demo/api/: .gitignore  analytics.py  claude_bridge.py  requirements.txt  rl_bridge.py  rl_environment.py  routes.py  server.py
demo/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
demo/frontend/public/game/: office_map.json
demo/frontend/src/: App.tsx  index.css  main.tsx
demo/frontend/src/components/: AgentCard.tsx  BenchmarkPanel.tsx  ConversationLog.tsx  EpisodeControls.tsx  MapOverlays.tsx  MarketDashboard.tsx  ModeSelector.tsx  ModelSelector.tsx  OfficeMap.tsx  PhaserGame.tsx  PlaygroundView.tsx  RewardPanel.tsx  ScenarioSelector.tsx  ThreeDView.tsx  TimelineView.tsx  ViewToggle.tsx
demo/frontend/src/components/fourd/: FourDView.tsx  Office3D.tsx  TimelineScrubber.tsx
demo/frontend/src/components/scene/: AgentBot.tsx  AgentLabel.tsx  IsometricOffice.tsx  OfficeRoom.tsx
demo/frontend/src/constants/: fourd.ts
demo/frontend/src/game/: OfficeScene.ts  OfficeScene.ts.bak  OfficeSceneV2.ts  agentBehavior.ts  agentStatusOverlay.ts  collaborationVisuals.ts  easing.ts  officeDesign.ts  officeLayout.ts  pathfinding.ts  speechBubbles.ts  spriteCache.ts  visualEffects.ts
demo/frontend/src/hooks/: useEffectiveState.ts  useWebSocket.ts
demo/frontend/src/store/: useStore.ts
demo/frontend/src/types/: fourd.ts  index.ts
docs/: FINAL_DELIVERABLES.txt  IMPLEMENTATION_STATUS.md  NEXT_STEPS_PHASE5.md  OFFICESCENESV2_MIGRATION.md  PHASE5_COMPLETION.md  PHASE_5_COMPLETE.md  PLAN_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md
examples/: run_agent.py  simple_agent.py
office_os/: .gitignore  Dockerfile.backend  Dockerfile.training  README.md  __init__.py  client.py  demo_inference.py  frontend.py  generate_training_data.py  models.py  openenv.yaml  pyproject.toml  run_agents.py  send_training.py  train_loop.py
office_os/agents/: __init__.py  base_agent.py  llm_agent.py  memory.py  prompts.py
office_os/docs/: TECHNICAL.md  northflank-h100-setup.md
office_os/integrations/: SHEETS_SETUP.md  __init__.py  github.py  sheets.py
office_os/market/: __init__.py  config.py  events.py  metrics.py  scenarios.py  simulator.py  state.py
office_os/openenv_office_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
office_os/server/: Dockerfile  __init__.py  app.py  office_os_environment.py
office_os/tests/: test_env.py
office_os/training/: Dockerfile.northflank  NORTHFLANK_SETUP.md  __init__.py  collector.py  entrypoint-docker.sh  entrypoint.sh  keepalive.sh  mac_trainer.py  northflank_server.py  office_os_training_demo.ipynb  run_training.sh  start_train_worker.sh  start_vllm.sh  train_worker.py  trainer.py
office_os/training_data/: all_trajectories.jsonl  trajectories_day_3.jsonl  trajectories_day_6.jsonl
startup_os_front/: README.md  metadata.json
startup_os_front/src/: App.tsx  constants.ts
startup_os_front/src/components/: Office3D.tsx
startupcraft-rl/: metadata.json  package-lock.json  package.json
startupcraft-rl/src/: App.tsx  constants.ts  index.css  types.ts
startupcraft-rl/src/components/: Office3D.tsx
